Sprint 6.5: Implement CI/CD, security hardening, and production release platform